--- a/gb/20/8/27/n12361767.md
+++ b/gb/20/8/27/n12361767.md
@@ -1,16 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/whhoub340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/whhoub340/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/whhoub340/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/whhoub340/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/whhoub340/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/whhoub340/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/whhoub340/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/whhoub340/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】毛泽东警卫员张思德怎么死的？</h2>
-<a href="https://git.io/JUAZ3"><img width="600" src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/whhoub340/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d10efcw5kfoez9.cloudfront.net/C7riuszim"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>毛泽东贴身警卫张思德，在南泥湾烧鸦片时被砸死在窑洞里，毛为此还亲笔题词悼念。那题词就是在北京中南海南门影背上那五个大字：为人民服务。张思德究竟何许人也？他在南泥湾干了啥？（公有领域／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年10月06日讯】北京中南海的南门叫新华门，十里长街东来西去的车辆和行人，都可以看到持枪戳在门前的卫兵，还有门内那块红色影背和上面五个鎏金大字“<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E4%B8%BA%E4%BA%BA%E6%B0%91%E6%9C%8D%E5%8A%A1.md#1">为人民服务</a>”。这五个字是毛泽东在延安蛰伏时为一个意外死去的警卫员<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E5%BC%A0%E6%80%9D%E5%BE%B7.md#1">张思德</a>写的煽情悼文的题目。1949年夺取政权后，这五个字竟成了中共巩固统治地位，愚弄中国人民70年的法宝。</p>
-<p>被誉为荒诞主义大师的大陆作家阎连科写过一部小说，名字也叫《<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E4%B8%BA%E4%BA%BA%E6%B0%91%E6%9C%8D%E5%8A%A1.md#1">为人民服务</a>》，内容却嘲讽了毛在同名演讲中说的“我们是为人民服务的”这句话。怎么嘲讽的咱们结尾再说。悲催的是，一代一代的中国人，却不得不接受中共的洗脑，比如，毛的《为人民服务》就被编入小学课本，几十年如一日的欺骗着中国人从小长到大。</p>
-<p>值得一提的是，“文革”十年浩劫中，毛的《为人民服务》被膜拜为“<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E8%80%81%E4%B8%89%E7%AF%87.md#1">老三篇</a>”之首，另两篇叫做《纪念白求恩》和《愚公移山》。其中迫令全国人民背诵的句子称：“为人民利益而死，就比泰山还重；替法西斯卖力，替剥削人民和压迫人民的人去死，就比鸿毛还轻。<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E5%BC%A0%E6%80%9D%E5%BE%B7.md#1">张思德</a>同志是为人民利益而死的，他的死是比泰山还要重的。”</p>
+	<p>【大纪元2020年10月06日讯】北京中南海的南门叫新华门，十里长街东来西去的车辆和行人，都可以看到持枪戳在门前的卫兵，还有门内那块红色影背和上面五个鎏金大字“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%BA%E4%BA%BA%E6%B0%91%E6%9C%8D%E5%8A%A1.md#1">为人民服务</a>”。这五个字是毛泽东在延安蛰伏时为一个意外死去的警卫员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E6%80%9D%E5%BE%B7.md#1">张思德</a>写的煽情悼文的题目。1949年夺取政权后，这五个字竟成了中共巩固统治地位，愚弄中国人民70年的法宝。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" allow="autoplay" scrolling="no" seamless src="https://player.captivate.fm/episode/7c399484-53df-47b8-8418-30cc8250da24"></a></div>
+<p><strong>（听更多新闻请至<ahref="https://github.com/hxcaik307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<p>被誉为荒诞主义大师的大陆作家阎连科写过一部小说，名字也叫《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%BA%E4%BA%BA%E6%B0%91%E6%9C%8D%E5%8A%A1.md#1">为人民服务</a>》，内容却嘲讽了毛在同名演讲中说的“我们是为人民服务的”这句话。怎么嘲讽的咱们结尾再说。悲催的是，一代一代的中国人，却不得不接受中共的洗脑，比如，毛的《为人民服务》就被编入小学课本，几十年如一日的欺骗着中国人从小长到大。</p>
+<p>值得一提的是，“文革”十年浩劫中，毛的《为人民服务》被膜拜为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%80%81%E4%B8%89%E7%AF%87.md#1">老三篇</a>”之首，另两篇叫做《纪念白求恩》和《愚公移山》。其中迫令全国人民背诵的句子称：“为人民利益而死，就比泰山还重；替法西斯卖力，替剥削人民和压迫人民的人去死，就比鸿毛还轻。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E6%80%9D%E5%BE%B7.md#1">张思德</a>同志是为人民利益而死的，他的死是比泰山还要重的。”</p>
 <p>这个中共眼中死得比泰山还重的张思德到底何许人也？他又为人民做了哪些了不起的事情呢？</p>
-<p><center><a src=""></a><a href="https://git.io/JUAZ3"><img width="600" src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/whhoub340/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/nj71OBkF8Lo" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>让我们一起来看看共产党编的这个骗人故事。</p>
+<p><center><a src=""></a><a href="https://d10efcw5kfoez9.cloudfront.net/C7riuszim"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/nj71OBkF8Lo" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>让我们一起来看看共产党编的这个骗人故事。</p>
 <p>官方档案显示，张思德1915年生于四川省仪陇县韩家湾，佃农出身。1933年参加红军，后加入中共青年团，参加过被国军围剿后向北逃跑的“长征”。1935年，在残余红军到达陕北后，张在军委警卫营担任通讯班长。1937年加入中共。1942年进了中央警备团，1943年担任毛泽东的警卫员。1944年参加“大生产运动”，在安塞县烧木炭，9月5日窑洞塌方，张思德被砸死在窑洞中。</p>
 <p>单看张思德的履历，似乎没做什么了不起的事情，而且，一个卫兵死了，似乎并没有足够的资格要高调召开追悼会。而事实恰恰相反，中共中央直属机关不仅为张召开了追悼会，而且毛还亲自发表讲话。更让人心生疑窦的是，此后也再没有发生如此高规格纪念一个战士的事，尽管毛堂而皇之地宣称“今后不管死了谁，不管是炊事员，是战士，只要他是做过一些有益的工作的，我们都要给他送葬，开追悼会”。</p>
 <p>民谚说：事出反常必有妖。在中共等级森严的团伙规矩中，主席致敬小兵不仅说不通，而且绝无仅有。那么，这种反常里有什么隐情呢？</p>
@@ -28,49 +31,49 @@
 <p>据说，除了张思德，警卫团很多官兵都轮流参加过加工烟土的工作。这样说来，张思德们是在为人民谋利益还是在为中共自己谋利益呢？</p>
 <p>可叹的是，张思德为了罪恶的鸦片丢掉了鲜活的生命，最不堪的是，这个“烧烟英雄”还让蒙在鼓里的全国人民认真学习了几十年。</p>
 <p>最后，同叫《为人民服务》，阎连科的小说怎么就讥讽老毛了呢？因为他讲了在师长家当男保姆的勤务兵吴大旺与性饥渴的师长夫人刘莲发生婚外恋的故事。按现在的话说，这个主题非常的政治不正确。于是小说删节本在《花城》刚发表，立马被中宣部查禁，禁止发行、转载、评论、摘编、报道，并收剿已发出的杂志。罪名是诋毁共军和毛“为人民服务”的宗旨。但很可惜，结果反而使这部小说名声大噪。</p>
-<p>据说诞生<ahref="https://github.com/whhoub340/djy/blob/master/gb/tag/%E8%80%81%E4%B8%89%E7%AF%87.md#1">老三篇</a>《为人民服务》和张思德的葬身地，最早被百姓叫做“烂泥湾”。后来嫌不好听改了南泥湾。这也就难怪了，这个骗人欺世的烂泥党，再怎么改好听的名称，也变不了自身的糜烂本质。</p>
+<p>据说诞生<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%80%81%E4%B8%89%E7%AF%87.md#1">老三篇</a>《为人民服务》和张思德的葬身地，最早被百姓叫做“烂泥湾”。后来嫌不好听改了南泥湾。这也就难怪了，这个骗人欺世的烂泥党，再怎么改好听的名称，也变不了自身的糜烂本质。</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E3%80%90%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%80%E3%80%91.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊? ＃</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/8/6/30/n2172974.md#1">网文： 张思德死于延安炼鸦片</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/13/7/10/n3913065.md#1">胡椒粉 : 张思德烧的炭都去哪里了？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/16/4/14/n7553881.md#1">林辉：还原中共“英雄模范”之张思德</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/17/2/24/n8844339.md#1">南泥湾种鸦片 张思德之死背后有秘密</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/6/30/n2172974.md#1">网文： 张思德死于延安炼鸦片</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/7/10/n3913065.md#1">胡椒粉 : 张思德烧的炭都去哪里了？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/4/14/n7553881.md#1">林辉：还原中共“英雄模范”之张思德</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/2/24/n8844339.md#1">南泥湾种鸦片 张思德之死背后有秘密</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11372651.md#1" target="_blank">新州：豢养特务作恶 中共卑鄙无耻</a></li><li><a href="https://github.com/whhoub340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/29/n10525205.md#1" target="_blank">林辉：中共“志愿军”唯一回国女战俘的遭遇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">法轮功学员受邀在美智库演讲 感动华府听众</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/25/n12429391.md#1">奥妙莫名中秋节神迹  搭起仙凡之桥</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/8/27/n12361868.md#1">【欺世大观】刘胡兰不是女英雄</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12455719.md#1">【新闻看点】川普回白宫 9千万中共党员移美受限</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/2/n12375753.md#1">【思想领袖】班克斯：全球遭难 中共应担责</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12443120.md#1">在Costco购买这八种食品 最合适一家人吃</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451696.md#1">中秋节已过 没卖掉的月饼去哪了</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/3/n12451102.md#1">【新闻看点】川普试用新疗法 习要动王岐山？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12452582.md#1">李荣浩纠正谢霆锋一叫法 杨丞琳打趣回应</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/3/n12449781.md#1">润娥重温《EXIT》 公开爬绳攀岩练习影片获赞</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/3/n12449423.md#1">第31届金曲奖得奖名单 青峰、魏如萱封歌王歌后</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12450929.md#1">《艾蜜莉在巴黎》影评：莉莉柯林斯大放异彩 将好故事发扬光大</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451602.md#1">无人机拍到惊人照片：心形鲑鱼群包围鲨鱼</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451754.md#1">中共官媒谎称：台士兵一半不识字 开战就投降</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12443080.md#1">【直播】乳房有硬块是癌症？名医教你抗乳癌</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451880.md#1">从意大利到英国 10岁男童走2800公里去看奶奶</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/whhoub340/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/whhoub340/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/27/n12361767.htm">【欺世大观】毛泽东警卫员张思德怎么死的？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/27/n12361767.htm">【欺世大观】毛泽东警卫员张思德怎么死的？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/whhoub340/djy/blob/master/gb/20/8/27/n12361767.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/whhoub340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/whhoub340/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/whhoub340/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/whhoub340/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whhoub340/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/27/n12361767.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
